--- a/website.html
+++ b/website.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset = "UTF-8">
         <title>Manpreet Saini's Website</title>
+        <link rel="stylesheet" type="text/css" href="design.css" title="style"/>
     </head>
     <body>
-        <h1>My Website</h1>
-        <p>Sample Paragraph!</p>
+        <div id="container">
+            <h1>My Website</h1>
+            <p>Sample Paragraph!</p>
+            <div id="footer">
+                <p> (c) Author - Manpreet Saini</p>
+            </div>
+        </div>
     </body>
 </html>
