--- a/website.html
+++ b/website.html
@@ -34,33 +34,27 @@
                         <div class="navbar-collapse collapse" id="navbar-collapse-1" aria-expanded="false" style="height: 1px;">
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="about-nav"><a href="#about-section" class="nav-link"><i class="fa fa-id-card-o" aria-hidden="true"></i>About<span class="sr-only">(current)</span></a></li>
-                                <li class="work-nav"><a href="#work-section" class="nav-link"><i class="fa fa-code" aria-hidden="true"></i>Work</a></li>
+                                <li class="project-nav"><a href="#project-section" class="nav-link"><i class="fa fa-code" aria-hidden="true"></i>Projects</a></li>
                                 <li class="contact-nav"><a href="#contact-section" class="nav-link"><i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <!-- end of nav bar -->
-
 
                 <div class="header-content" id="home">
-                    <h1 class="animated fadeInDown">Ben Thompson</h1>
-                    <p class="animated fadeInUp">Aspiring Web Developer</p>
+                    <h1 class="animated fadeInDown">Manpreet Saini</h1>
+                    <p class="animated fadeInUp">Aspiring Computer Scientist</p>
 
                     <hr>
                     <!-- Divider -->
 
                     <!-- Social Links -->
                     <div class="social-links">
-                        <a href="https://github.com/BenThom21" target="_blank" class="github-link"><i class="fa fa-github"
-                    aria-hidden="true"></i></a>
-                        <a href="https://www.freecodecamp.com/benthom21" target="_blank" class="fcc-link"><i
-                    class="fa fa-free-code-camp" aria-hidden="true"></i></a>
-                        <a href="https://www.linkedin.com/in/benthompson2014" target="_blank" class="linkedin-link"><i
-                    class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="https://twitter.com/BenThom21" target="_blank" class="twitter-link"><i class="fa fa-twitter"
-                    aria-hidden="true"></i></a>
-                        <a href="mailto:benthompson4496@gmail.com"><i class="email-link fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <a href="https://github.com/msaini12" target="_blank" class="github-link"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/manpreet-saini" target="_blank" class="linkedin-link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank" class="twitter-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="mailto:m.s.saini1999@gmail.com"><i class="email-link fa fa-envelope-o" aria-hidden="true"></i></a>
+                        <!-- <a href="https://www.freecodecamp.com/benthom21" target="_blank" class="fcc-link"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a> -->
                     </div>
                 </div>
                 <!--End header content -->
@@ -76,7 +70,7 @@
             <!-- BEGIN ABOUT SECTION -->
             <div class="about-container" id="about-section">
                 <!-- keep this as an ID for linking purposes only -->
-                <h2 class="fade">Hi, I'm Ben!
+                <h2 class="fade">Hi, I'm Manpreet!
                     <br>
                     <span class="hi-sub fade">Aspiring Web Developer, Dog Lover, and Taco Enthusiast.</span>
                 </h2>
@@ -86,7 +80,7 @@
                             <img src="https://pbs.twimg.com/profile_images/514069123962114048/O_OCcbGL.jpeg" class="profile-pic img-responsive img-circle">
                         </div>
                         <div class="col-sm-6 col-xs-12 about-right fade">
-                            <!--   THIS IS WHERE I NEED TO UPDATE TO MAKE INTO 2 PARAGRAPHS THAT WORK -->
+                            <!--   THIS IS WHERE I NEED TO UPDATE TO MAKE INTO 2 PARAGRAPHS THAT project -->
                             <p class="about-p">
                                 <strong>Online:</strong> I love building beautiful websites and stuff for the web. By day, I am an SEO improving both the content and performance of clients' websites. By night, I'm teaching myself to code with the help of
                                 countless individuals and communities as I pursue turning this passion into more than a free time hobby.
@@ -102,20 +96,20 @@
 
             <!-- END ABOUT SECTION -->
 
-            <!-- BEGIN WORK SECTION -->
-            <div class="container work-container">
-                <div id="work-section">
-                    <h2>My Work</h2>
+            <!-- BEGIN PROJECT SECTION -->
+            <div class="container project-container">
+                <div id="project-section">
+                    <h2>My project</h2>
 
                     <div class="row">
                         <div class="container">
-                            <div class="work-sample">
-                                <div class="work-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                            <div class="project-sample">
+                                <div class="project-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <!-- NOTE: offset pulls all screen sizes over? figure this out -->
                                     <!--               offset 0? -->
                                     <img src="http://i63.tinypic.com/2cshsnq.png" alt="Tribute page to Arnold Palmer" class="img-responsive img-thumbnail">
                                 </div>
-                                <div class="work-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                                <div class="project-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <h4>Tribute Page - Free Code Camp</h4>
                                     <p class="description">
                                         The first project for Free Code Camp's Front-End Certification - a tribute page to someone you admire. I chose my favorite golf icon, Arnold Palmer, who passed away in 2016. This was my first real attempt to put a page together and my first experience
@@ -128,7 +122,7 @@
                                         <span class="label label-primary">CSS</span>
                                         </span>
                                     </p>
-                                    <div class="work-buttons">
+                                    <div class="project-buttons">
                                         <a target="_blank" href="https://github.com/BenThom21/FCC-Front-End/tree/master/Tribute-Page"><button
                             class="hvr-icon-pop" type="button">Demo</button></a>
                                         <a target="_blank" class="github-button" href="https://github.com/BenThom21/FCC-Front-End/tree/master/Tribute-Page"><button
@@ -144,11 +138,11 @@
 
                     <div class="row">
                         <div class="container">
-                            <div class="work-sample">
-                                <div class="work-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                            <div class="project-sample">
+                                <div class="project-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <img src="http://i66.tinypic.com/2gwuryx.jpg" alt="Tribute page to Arnold Palmer" class="img-responsive img-thumbnail">
                                 </div>
-                                <div class="work-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                                <div class="project-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <h4>Coming Soon!</h4>
                                     <p class="description">
                                         I will update this with my favorite projects as I build them. Come back soon and take a look!
@@ -160,7 +154,7 @@
                                         <span class="label label-primary">CSS</span>
                                         </span>
                                     </p>
-                                    <div class="work-buttons">
+                                    <div class="project-buttons">
                                         <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a>
                                         <a target="_blank" class="github-button" href="#"><button class="hvr-icon-pop" type="button">
                             Code</button></a>
@@ -175,11 +169,11 @@
 
                     <div class="row">
                         <div class="container">
-                            <div class="work-sample">
-                                <div class="work-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                            <div class="project-sample">
+                                <div class="project-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <img src="http://i66.tinypic.com/2gwuryx.jpg" alt="Tribute page to Arnold Palmer" class="img-responsive img-thumbnail">
                                 </div>
-                                <div class="work-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
+                                <div class="project-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <h4>Coming Soon!</h4>
                                     <p class="description">
                                         I will update this with my favorite projects as I build them. Come back soon and take a look!
@@ -191,7 +185,7 @@
                                         <span class="label label-primary">CSS</span>
                                         </span>
                                     </p>
-                                    <div class="work-buttons">
+                                    <div class="project-buttons">
                                         <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a>
                                         <a target="_blank" class="github-button" href="#"><button class="hvr-icon-pop" type="button">
                             Code</button></a>
@@ -203,9 +197,9 @@
                     </div>
 
                 </div>
-                <!--End ".work-section" -->
+                <!--End ".project-section" -->
             </div>
-            <!-- END WORK SECTION -->
+            <!-- END PROJECT SECTION -->
 
 
             <!--   BEGIN CONTACT SECTION -->
@@ -225,20 +219,13 @@
                 </a>
                     </div>
                     <br>
-
-
-
                     <div class="contact-buttons">
-                        <a class="social github-social" href="https://github.com/BenThom21" target="_blank"><i class="fa fa-github"
-                    aria-hidden="true"></i></a>
-                        <a class="social codepen-social" href="https://codepen.io/benthom21/" target="_blank"><i class="fa fa-codepen"
-                    aria-hidden="true"></i></a>
-                        <a class="social fcc-social" href="https://www.freecodecamp.com/benthom21" target="_blank"><i
-                    class="fa fa-free-code-camp" aria-hidden="true"></i></a>
-                        <a class="social twitter-social" href="https://twitter.com/BenThom21" target="_blank"><i class="fa fa-twitter"
-                    aria-hidden="true"></i></a>
-                        <a class="social linkedin-social" href="https://www.linkedin.com/in/benthompson2014" target="_blank"><i
-                    class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a class="social github-social" href="https://github.com/msaini12" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a class="social linkedin-social" href="https://www.linkedin.com/in/benthompson2014" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <!-- <a class="social codepen-social" href="https://codepen.io/benthom21/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a> -->
+                        <a class="social twitter-social" href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <!-- <a class="social twitter-social" href="https://twitter.com/BenThom21" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> -->
+                        
                         <!--<a class="social medium-social" href="https://medium.com/@BenThom21" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a> -->
                     </div>
                 </div>
