Added footer, fixed social media and email, and started about me section

--- a/website.html
+++ b/website.html
@@ -44,35 +44,31 @@
                 <div class="header-content" id="home">
                     <h1 class="animated fadeInDown">Manpreet Saini</h1>
                     <p class="animated fadeInUp">Aspiring Computer Scientist</p>
-
                     <hr>
                     <!-- Divider -->
 
                     <!-- Social Links -->
                     <div class="social-links">
                         <a href="https://github.com/msaini12" target="_blank" class="github-link"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank" class="facebook-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         <a href="https://www.linkedin.com/in/manpreet-saini" target="_blank" class="linkedin-link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank" class="twitter-link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         <a href="mailto:m.s.saini1999@gmail.com"><i class="email-link fa fa-envelope-o" aria-hidden="true"></i></a>
-                        <!-- <a href="https://www.freecodecamp.com/benthom21" target="_blank" class="fcc-link"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a> -->
                     </div>
                 </div>
                 <!--End header content -->
 
                 <!--This is an arrow to be placed at the bottom to go to the next page -->
                 <div class="down">
-                    <a class="next-page" href="#about-section"><i class="animated pulse infinite fa fa-chevron-circle-down fa-2x"
-                aria-hidden="true"></i></a>
+                    <a class="next-page" href="#about-section"><i class="animated pulse infinite fa fa-chevron-circle-down fa-2x" aria-hidden="true"></i></a>
                 </div>
             </header>
-
 
             <!-- BEGIN ABOUT SECTION -->
             <div class="about-container" id="about-section">
                 <!-- keep this as an ID for linking purposes only -->
                 <h2 class="fade">Hi, I'm Manpreet!
                     <br>
-                    <span class="hi-sub fade">Aspiring Web Developer, Dog Lover, and Taco Enthusiast.</span>
+                    <span class="hi-sub fade">Aspiring Computer Scientist, Video Game Enthusiast, and Space Fanatic.</span>
                 </h2>
                 <div class="container-fluid">
                     <div class="row about-row">
@@ -212,21 +208,16 @@
                         </p>
                     </div>
                     <div class="email-button">
-                        <a href="mailto:benthompson4496@gmail.com?subject=I%20Saw%20Your%20Website" class="contact-button">
-                Email Me
-                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                <span>benthompson4496@gmail.com</span>
-                </a>
+                    <a href="mailto:m.s.saini1999@gmail.com" class="contact-button">
+                        Email Me <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                        <span>m.s.saini1999@gmail.com</span>
+                    </a>
                     </div>
                     <br>
                     <div class="contact-buttons">
                         <a class="social github-social" href="https://github.com/msaini12" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a class="social facebook-social" href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         <a class="social linkedin-social" href="https://www.linkedin.com/in/benthompson2014" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        <!-- <a class="social codepen-social" href="https://codepen.io/benthom21/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a> -->
-                        <a class="social twitter-social" href="https://www.facebook.com/profile.php?id=100009214807107" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <!-- <a class="social twitter-social" href="https://twitter.com/BenThom21" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> -->
-                        
-                        <!--<a class="social medium-social" href="https://medium.com/@BenThom21" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -237,10 +228,9 @@
                 <div class="row">
                     <div class="footer col-xs-12">
                         <p>
-                            Coded with <i class="animated pulse infinite fa fa-heart" aria-hidden="true"></i> by Ben Thompson
+                            Coded by Manpreet Saini
                             <br>
-                            <i class="fa fa-copyright" aria-hidden="true"></i> 2017
-                            <span class="location"><i class="fa fa-map-marker" aria-hidden="true"></i> Chicago, IL</span>
+                            <i class="fa fa-copyright" aria-hidden="true"></i> 2019 <span class="location"><i class="fa fa-map-marker" aria-hidden="true"></i> Brampton, ON</span>
                         </p>
                     </div>
                 </div>
