--- a/website.html
+++ b/website.html
@@ -13,7 +13,7 @@
     <body>
         <head>
             <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-            <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+            <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0"/>
         </head>
         <body data-spy="scroll" data-target=".navbar" data-offset="60">
             <!-- // HEADER //-->
@@ -65,7 +65,6 @@
 
             <!-- BEGIN ABOUT SECTION -->
             <div class="about-container" id="about-section">
-                <!-- keep this as an ID for linking purposes only -->
                 <h2 class="fade">Hi, I'm Manpreet!
                     <br>
                     <span class="hi-sub fade">Aspiring Computer Scientist, Video Game Enthusiast, and Space Fanatic.</span>
@@ -78,12 +77,10 @@
                         <div class="col-sm-6 col-xs-12 about-right fade">
                             <!--   THIS IS WHERE I NEED TO UPDATE TO MAKE INTO 2 PARAGRAPHS THAT project -->
                             <p class="about-p">
-                                <strong>Online:</strong> I love building beautiful websites and stuff for the web. By day, I am an SEO improving both the content and performance of clients' websites. By night, I'm teaching myself to code with the help of
-                                countless individuals and communities as I pursue turning this passion into more than a free time hobby.
+                                <strong>Online:</strong> 
                                 <br>
                                 <br>
-                                <strong>Offline:</strong> A born and raised MidWesterner, I am a big outdoorsman when I do step away from the computer. Living in the MidWest, it's hard to improve my golf game, but that doesn't stop me from trying as soon
-                                as the snow melts. Sadly, apartment living is not conducive to owning a dog, but I get closer to caving every day.
+                                <strong>Offline:</strong>
                             </p>
                         </div>
                     </div>
@@ -92,10 +89,10 @@
 
             <!-- END ABOUT SECTION -->
 
-            <!-- BEGIN PROJECT SECTION -->
+            <!-- BEGIN PROJECTS SECTION -->
             <div class="container project-container">
                 <div id="project-section">
-                    <h2>My project</h2>
+                    <h2>Projects</h2>
 
                     <div class="row">
                         <div class="container">
@@ -103,25 +100,25 @@
                                 <div class="project-img col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                                     <!-- NOTE: offset pulls all screen sizes over? figure this out -->
                                     <!--               offset 0? -->
-                                    <img src="http://i63.tinypic.com/2cshsnq.png" alt="Tribute page to Arnold Palmer" class="img-responsive img-thumbnail">
+                                    <img src="https://github.com/msaini12/Bank-Application/blob/master/Photos/Picture1.jpg?raw=true" alt="Bank Application" class="img-responsive img-thumbnail img-size">
                                 </div>
                                 <div class="project-info col-sm-6 col-xs-9 col-xs-offset-1 col-sm-offset-0">
-                                    <h4>Tribute Page - Free Code Camp</h4>
+                                    <h4>Bank Application</h4>
                                     <p class="description">
-                                        The first project for Free Code Camp's Front-End Certification - a tribute page to someone you admire. I chose my favorite golf icon, Arnold Palmer, who passed away in 2016. This was my first real attempt to put a page together and my first experience
-                                        with Bootstrap.
+                                        This android application allows a user to create clients that can deposit, withdraw, and tranfser money with other 
+                                        clients, and can also display their statement history.
                                     </p>
                                     <p>
                                         <span class="technologies-used">
-                        <span class="label label-default">Bootstrap</span>
-                                        <span class="label label-danger">HTML</span>
-                                        <span class="label label-primary">CSS</span>
+                                        <span class="label label-default">Android Studio</span>
+                                        <span class="label label-danger">Java</span>
+                                        <!-- <span class="label label-primary">CSS</span> -->
                                         </span>
                                     </p>
                                     <div class="project-buttons">
-                                        <a target="_blank" href="https://github.com/BenThom21/FCC-Front-End/tree/master/Tribute-Page"><button
-                            class="hvr-icon-pop" type="button">Demo</button></a>
-                                        <a target="_blank" class="github-button" href="https://github.com/BenThom21/FCC-Front-End/tree/master/Tribute-Page"><button
+                                        <!-- <a target="_blank" href="https://github.com/BenThom21/FCC-Front-End/tree/master/Tribute-Page"><button
+                            class="hvr-icon-pop" type="button">Demo</button></a> -->
+                                        <a target="_blank" class="github-button" href="https://github.com/msaini12/Bank-Application"><button
                             class="hvr-icon-pop" type="button"> Code</button></a>
                                     </div>
                                 </div>
@@ -145,15 +142,14 @@
                                     </p>
                                     <p>
                                         <span class="technologies-used">
-                        <span class="label label-default">Default</span>
+                                        <span class="label label-default">Default</span>
                                         <span class="label label-danger">HTML</span>
                                         <span class="label label-primary">CSS</span>
                                         </span>
                                     </p>
                                     <div class="project-buttons">
-                                        <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a>
-                                        <a target="_blank" class="github-button" href="#"><button class="hvr-icon-pop" type="button">
-                            Code</button></a>
+                                        <!-- <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a> -->
+                                        <a target="_blank" class="github-button" href="#"><button class="hvr-icon-pop" type="button">Code</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -182,7 +178,7 @@
                                         </span>
                                     </p>
                                     <div class="project-buttons">
-                                        <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a>
+                                        <!-- <a target="_blank" href="#"><button class="hvr-icon-pop" type="button">Demo</button></a> -->
                                         <a target="_blank" class="github-button" href="#"><button class="hvr-icon-pop" type="button">
                             Code</button></a>
                                     </div>
